Revert "First update for 1.21 support"
This reverts commit 51a5d39dce9c4f3d2c6c451f841d7468ffe8ad86.