@@ -73,7 +73,8 @@ public class Give implements Cmd {
 
         int headGiven = 0;
         for (HBHead head : headsToGive) {
-            if (head instanceof HBHeadHDB headHDB) {
+            if (head instanceof HBHeadHDB) {
+                HBHeadHDB headHDB = (HBHeadHDB) head;
 
                 if (!headHDB.isLoaded()) {
                     player.sendMessage(LanguageService.getMessage("Messages.HeadNotYetLoaded")
@@ -113,7 +114,7 @@ public class Give implements Cmd {
                 items.addAll(IntStream.range(1, headCount + 1)
                         .boxed()
                         .map(Object::toString)
-                        .toList());
+                        .collect(Collectors.toList()));
             }
         }
 
