@@ -9,7 +9,6 @@ import org.bukkit.inventory.ItemStack;
 
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -25,7 +24,7 @@ public class PlayerUtils {
 
     public static String getPseudoFromSession(String uuid) {
         try {
-            URL url = URI.create("https://sessionserver.mojang.com/session/minecraft/profile/" + uuid).toURL();
+            URL url = new URL("https://sessionserver.mojang.com/session/minecraft/profile/" + uuid);
             URLConnection request = url.openConnection();
             request.connect();
 
